Added support for custom biomes!
I know it's an ugly mess, but a rewrite is following soon.