@@ -4,8 +4,7 @@ import de.nightevolution.realisticplantgrowth.RealisticPlantGrowth;
 import de.nightevolution.realisticplantgrowth.utils.biome.BiomeChecker;
 import de.nightevolution.realisticplantgrowth.utils.enums.MessageType;
 import de.nightevolution.realisticplantgrowth.utils.enums.PlaceholderInterface;
-import org.bukkit.Material;
-import org.bukkit.World;
+import org.bukkit.*;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.permissions.Permission;
@@ -22,6 +21,7 @@ public class Info extends SubCommand implements PlaceholderInterface {
     private Material plantMaterial;
     private Material seedMaterial;
     private Material notGrowthModifiedSeed;
+    private NamespacedKey biomeKey;
 
     /**
      * Constructor for the 'info' subcommand.
@@ -70,8 +70,18 @@ public class Info extends SubCommand implements PlaceholderInterface {
             return false;
         }
 
-        // Check the biomes where the plant can grow
-        BiomeChecker bc = new BiomeChecker(plantMaterial, player.getLocation().getBlock().getBiome());
+        Location playerLocation = player.getLocation();
+        BiomeChecker bc;
+
+        // New custom biome handling
+        if (instance.isPaperFork()) {
+            biomeKey = Bukkit.getUnsafe().getBiomeKey(player.getWorld(), playerLocation.getBlockX(), playerLocation.getBlockY(), playerLocation.getBlockZ());
+             bc = new BiomeChecker(plantMaterial, biomeKey);
+        } else {
+            // Check the biomes where the plant can grow
+            bc = new BiomeChecker(plantMaterial, playerLocation.getBlock().getBiome());
+        }
+
         String defaultBiomesList = formatBiomeList(bc.getDefaultBiomes());
 
         // Prepare placeholders and replacements for the message
@@ -170,19 +180,29 @@ public class Info extends SubCommand implements PlaceholderInterface {
         }
 
         // If the list contains only 'ALL', return it as is
-        if (biomeList.size() == 1 && biomeList.get(0).equalsIgnoreCase("ALL")) {
-            return biomeList.get(0);
+        if (biomeList.size() == 1 && biomeList.getFirst().equalsIgnoreCase("ALL")) {
+            return biomeList.getFirst();
         }
 
         builder.append("<newline>");
-        for (String element : biomeList) {
-            builder.append("     - ")
-                    .append("<lang:biome.minecraft.")
-                    .append(element.toLowerCase())
-                    .append(">")
-                    .append("<newline>");
+        if (instance.isPaperFork()) {
+            // TODO: Need NamespacedKey for correct formatting
+            for (String element : biomeList) {
+                builder.append("     - ")
+                        //.append("<lang:biome.minecraft.")
+                        .append(element.toLowerCase())
+                        //.append(">")
+                        .append("<newline>");
+            }
+        } else {
+            for (String element : biomeList) {
+                builder.append("     - ")
+                        .append("<lang:biome.minecraft.")
+                        .append(element.toLowerCase())
+                        .append(">")
+                        .append("<newline>");
+            }
         }
-
         return builder.toString();
     }
 }
