@@ -7,6 +7,7 @@ import de.nightevolution.realisticplantgrowth.utils.mapper.MaterialMapper;
 import dev.dejvokep.boostedyaml.block.implementation.Section;
 import dev.dejvokep.boostedyaml.route.Route;
 import org.bukkit.Material;
+import org.bukkit.NamespacedKey;
 import org.bukkit.block.Biome;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -18,11 +19,13 @@ import java.util.*;
  * based on configured BiomeGroups and Default Biomes.
  */
 public class BiomeChecker {
+    private final RealisticPlantGrowth instance;
     private final ConfigManager cm;
     private final Logger logger;
 
     private final Material plantMaterial;
-    private final Biome currentBiome;
+    private Biome currentBiome;
+    private String currentBiomeNameSpace;
 
     private static final Route biomeGroupsListRoute = Route.from("BiomeGroup", "Groups");
     private static final Route defaultBiomeListRoute = Route.from("Default", "Biome");
@@ -34,14 +37,39 @@ public class BiomeChecker {
     private final static Map<Material, Biome> validBiomesCache = new HashMap<>();
 
 
+
+    /**
+     * Constructs a {@link BiomeChecker} for a specific plant {@link Material} and {@link org.bukkit.NamespacedKey}.
+     *
+     * @param plantMaterial The {@link Material} of the plant.
+     * @param currentBiomeNameSpace  The current {@link org.bukkit.NamespacedKey} of a {@link Biome} where the plant is located.
+     */
+    public BiomeChecker(@NotNull Material plantMaterial, @NotNull NamespacedKey currentBiomeNameSpace) {
+        instance = RealisticPlantGrowth.getInstance();
+        this.cm = instance.getConfigManager();
+        MaterialMapper materialMapper = instance.getVersionMapper().getMaterialMapper();
+
+        this.plantMaterial = plantMaterial;
+        this.currentBiomeNameSpace = currentBiomeNameSpace.asString();
+
+        this.currentPlantRoute = materialMapper.getConfigKeyByMaterial(plantMaterial);
+
+        logger = new Logger(this.getClass().getSimpleName(), RealisticPlantGrowth.isVerbose(), RealisticPlantGrowth.isDebug());
+        logger.verbose("Creating new Biome Checker.");
+        logger.verbose("NameSpacedKey: " + currentBiomeNameSpace.asString()); // e.g. terralith:moonlight_valley
+        initPlantSection();
+    }
+
+
     /**
      * Constructs a {@link BiomeChecker} for a specific plant {@link Material} and {@link Biome}.
      *
      * @param plantMaterial The {@link Material} of the plant.
      * @param currentBiome  The current {@link Biome} where the plant is located.
      */
+    @Deprecated
     public BiomeChecker(@NotNull Material plantMaterial, @NotNull Biome currentBiome) {
-        RealisticPlantGrowth instance = RealisticPlantGrowth.getInstance();
+        instance = RealisticPlantGrowth.getInstance();
         this.cm = instance.getConfigManager();
         MaterialMapper materialMapper = instance.getVersionMapper().getMaterialMapper();
 
@@ -52,9 +80,11 @@ public class BiomeChecker {
 
         logger = new Logger(this.getClass().getSimpleName(), RealisticPlantGrowth.isVerbose(), RealisticPlantGrowth.isDebug());
         logger.verbose("Creating new Biome Checker.");
-
+        if (RealisticPlantGrowth.isVerbose())
+            logger.logToFile("BiomeKey: " + currentBiome.getKey(), "verbose");
         initPlantSection();
     }
+
 
     /**
      * Initializes the plant {@link Section} from the {@link ConfigManager}.
@@ -80,9 +110,21 @@ public class BiomeChecker {
         List<String> biomeGroupStringList = getBiomeGroupStringList();
         if (!biomeGroupStringList.isEmpty()) {
             for (String biomeGroup : biomeGroupStringList) {
-                if (cm.getBiomeSetOfBiomeGroup(biomeGroup).contains(currentBiome)) {
-                    matchingBiomeGroup = biomeGroup;
-                    return true;
+                if (instance.isPaperFork()) {
+                    // TODO: ConfigManager getBiomeSetOfBiomeGroup need to return Strings
+                    for (String biomeString : cm.getBiomeSetOfBiomeGroup(biomeGroup)) {
+                        logger.verbose("returned String: " + biomeString);
+                        logger.verbose("String to check: " + currentBiomeNameSpace);
+                        if (biomeString.equalsIgnoreCase(currentBiomeNameSpace)){
+                            matchingBiomeGroup = biomeGroup;
+                            return true;
+                        }
+                    }
+                } else {
+                    if (cm.getBiomeSetOfBiomeGroup(biomeGroup).contains(currentBiome.getKey().asString())) {
+                        matchingBiomeGroup = biomeGroup;
+                        return true;
+                    }
                 }
             }
         }
@@ -98,10 +140,17 @@ public class BiomeChecker {
         Optional<List<String>> optionalStringList = plantSection.getOptionalStringList(defaultBiomeListRoute);
         List<String> biomeStringList = optionalStringList.orElseGet(ArrayList::new);
         if (!biomeStringList.isEmpty()) {
-            if (biomeStringList.size() == 1 && biomeStringList.get(0).equalsIgnoreCase("ALL"))
+            if (biomeStringList.size() == 1 && biomeStringList.getFirst().equalsIgnoreCase("ALL"))
                 return true;
 
-            return (cm.getCheckedBiomeSet(biomeStringList).contains(currentBiome));
+            if (instance.isPaperFork()) {
+                // TODO: ConfigManager getBiomeSetOfBiomeGroup need to return Strings
+                logger.logToFile("currentBiomeNameSpaceString: " + currentBiomeNameSpace, "biome");
+                return (biomeStringList.contains(currentBiomeNameSpace));
+            } else {
+                logger.logToFile("currentBiomeNameSpaceString: " + currentBiome.getKey().asString(), "biome");
+                return (cm.getCheckedBiomeSet(biomeStringList).contains(currentBiome.getKey().asString()));
+            }
 
         }
         return false;
@@ -127,7 +176,7 @@ public class BiomeChecker {
         Optional<List<String>> biomeStringList = plantSection.getOptionalStringList(defaultBiomeListRoute);
         List<String> stringList = biomeStringList.orElseGet(ArrayList::new);
 
-        if (stringList.size() == 1 && stringList.get(0).equalsIgnoreCase("ALL")) {
+        if (stringList.size() == 1 && stringList.getFirst().equalsIgnoreCase("ALL")) {
             return List.of("ALL");
         }
 
